--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.org.hibernate.type.descriptor.sql = trace
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.properties.hibernate.hbm2ddl.auto:update
 
-# \uBA54\uC77C \uAD00\uB828
+# 메일 관련
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username = ahncomet.hello@gmail.com
@@ -26,5 +26,5 @@ spring.mail.password = vnebdmxeaafhlmtd
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-# \uC554\uD638\uBB38\uC790\uC5F4
+# 암호문자열
 lib.str = abcdef
